bodhi-aws-main/deployment/distribution-template/superset/allow-all-superset-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: kubeflow-allow-superset
  namespace: superset
spec:
  action: ALLOW
  rules:
    - {}
    # - from:
    #     - source:
    #         namespaces:
    #           - superset
