bodhi-aws-main/deployment/distribution-template/superset/allow-superset-external-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: superset-allow-external-access
  namespace: istio-system
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  rules:
    - to:
        - operation:
            hosts:
              - <<__subdomain_superset__>>.<<__domain__>>
