bodhi-aws-main/deployment/distribution-template/superset/deny-all-authorizationpolicy.yaml
# Enforce an explicit deny-by-default authorization model, similar to
# the deprecated Istio RBAC
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: global-deny-all-superset
  namespace: superset
# spec:
#   action: ALLOW
#   rules:
#     - {}
spec: {}
